--- a/common/etc/nginx/templates/default.conf.template
+++ b/common/etc/nginx/templates/default.conf.template
@@ -15,6 +15,8 @@ map $request_uri $uri_path {
 }
 
 server {
+    include /etc/nginx/conf.d/gateway/server_variables.conf;
+
     # Don't display the NGINX version number because we don't want to reveal
     # information that could be used to find an exploit.
     server_tokens off;
