--- a/oss/etc/nginx/templates/upstreams.conf.template
+++ b/oss/etc/nginx/templates/upstreams.conf.template
@@ -1,5 +1,8 @@
+# Use NGINX's non-blocking DNS resolution
+resolver ${DNS_RESOLVERS};
+
 upstream storage_urls {
-    # Upstreams are not refrshed until NGINX configuration is reloaded.
+    # Upstreams are not refreshed until NGINX configuration is reloaded.
     # NGINX Plus will dynamically reload upstreams when DNS records are changed.
 
     # Be sure to specify the port in the S3_SERVER and be sure that port
