Updated to use latest NGINX and NJS
This changed upgrades NGINX to 1.19.7 and NJS to 0.5.1.
In this new version of NJS, it provides a filter function
that allows for headersOut to be modified thereby removing
the need for the headers_more module to strip off x-amz
headers.

--- a/common/etc/nginx/templates/default.conf.template
+++ b/common/etc/nginx/templates/default.conf.template
@@ -93,7 +93,7 @@ server {
         # We strip off all of the AWS specific headers from the server so that
         # there is nothing identifying the object as having originated in an
         # object store.
-        more_clear_headers 'x-amz-*';
+        js_header_filter s3gateway.filterOutAmzHeaders;
 
         # Catch all errors from S3 and sanitize them so that the user can't
         # gain intelligence about the S3 bucket being proxied.
