feat: add support for s3 folder listing

--- a/common/etc/nginx/nginx.conf
+++ b/common/etc/nginx/nginx.conf
@@ -6,6 +6,7 @@ pid        /var/run/nginx.pid;
 
 # NJS module used for implementing S3 authentication
 load_module modules/ngx_http_js_module.so;
+load_module modules/ngx_http_xslt_filter_module.so;
 
 # Preserve S3 environment variables for worker threads
 env S3_ACCESS_KEY_ID;
@@ -18,6 +19,7 @@ env S3_REGION;
 env AWS_SIGS_VERSION;
 env S3_DEBUG;
 env S3_STYLE;
+env ALLOW_DIRECTORY_LIST;
 
 events {
     worker_connections  1024;
