--- a/Dockerfile.plus
+++ b/Dockerfile.plus
@@ -5,6 +5,7 @@ ARG NGINX_GPGKEY
 ENV DISTRO_VERSION       buster
 ENV NGINX_VERSION        24-2
 ENV NJS_VERSION          24+0.5.3-1
+ENV XSLT_VERSION         24-1
 
 COPY plus/etc/ssl /etc/ssl
 COPY plus/usr /usr
@@ -28,6 +29,7 @@ RUN set -eux \
     apt-get -qq install --no-install-recommends --no-install-suggests -y \
         nginx-plus=${NGINX_VERSION}~${DISTRO_VERSION} \
         nginx-plus-module-njs=${NJS_VERSION}~${DISTRO_VERSION} \
+        nginx-plus-module-xslt=${XSLT_VERSION}~${DISTRO_VERSION} \
         gettext-base; \
     apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false; \
     rm -rf /var/lib/apt/lists/* /var/tmp/* /tmp/*; \
