--- a/test/docker-compose.yaml
+++ b/test/docker-compose.yaml
@@ -22,6 +22,7 @@ services:
       S3_REGION: "us-east-1"
       S3_DEBUG: "true"
       S3_STYLE: "virtual"
+      ALLOW_DIRECTORY_LIST:
       AWS_SIGS_VERSION:
   minio:
     image: "minio/minio:RELEASE.2021-02-19T04-38-02Z"
