removed the requirement to specify NGINX_GPGKEY

--- a/Dockerfile.plus
+++ b/Dockerfile.plus
@@ -1,6 +1,6 @@
 FROM debian:buster-slim
 
-ARG NGINX_GPGKEY
+ARG NGINX_GPGKEY=573BFD6B3D8FBC641079A6ABABF5BD827BD9BF62
 
 ENV DISTRO_VERSION       buster
 ENV NGINX_VERSION        24-2
