Add AWS instance profile credential support

--- a/Dockerfile.oss
+++ b/Dockerfile.oss
@@ -11,6 +11,7 @@ ENV NGINX_VERSION "1.21.5"
 COPY common/etc /etc
 COPY common/docker-entrypoint.sh /docker-entrypoint.sh
 COPY common/docker-entrypoint.d/00-check-for-required-env.sh /docker-entrypoint.d/00-check-for-required-env.sh
+COPY common/check_env.sh /check_env.sh
 COPY oss/etc /etc
 
 RUN set -eux \
