Allow using NGINX keyval store for credential caching

--- a/plus/etc/nginx/conf.d/gateway/server_variables.conf
+++ b/plus/etc/nginx/conf.d/gateway/server_variables.conf
@@ -2,3 +2,8 @@
 # caching is turned on. This feature uses the keyval store, so it
 # is only enabled when using NGINX Plus.
 set $cache_signing_key_enabled 1;
+
+# Variable indicating to the s3gateway.js script that session token
+# caching is turned on. This feature uses the keyval store, so it
+# is only enabled when using NGINX Plus.
+set $cache_instance_credentials_enabled 1;
