Expose proxy_cache_valid as configurable environment variable.

--- a/common/etc/nginx/nginx.conf
+++ b/common/etc/nginx/nginx.conf
@@ -20,6 +20,9 @@ env AWS_SIGS_VERSION;
 env S3_DEBUG;
 env S3_STYLE;
 env ALLOW_DIRECTORY_LIST;
+env PROXY_CACHE_VALID_OK;
+env PROXY_CACHE_VALID_NOTFOUND;
+env PROXY_CACHE_VALID_FORBIDDEN;
 
 events {
     worker_connections  1024;
