--- a/Dockerfile.oss
+++ b/Dockerfile.oss
@@ -2,6 +2,10 @@ FROM nginx:1.21.5
 
 ENV NGINX_VERSION "1.21.5"
 
+ENV PROXY_CACHE_VALID_OK "1h"
+ENV PROXY_CACHE_VALID_NOTFOUND "1m"
+ENV PROXY_CACHE_VALID_FORBIDDEN "30s"
+
 # We modify the nginx base image by:
 # 1. Adding configuration files needed for proxying private S3 buckets
 # 2. Adding a directory for proxied objects to be stored
