--- a/Dockerfile.plus
+++ b/Dockerfile.plus
@@ -7,6 +7,10 @@ ENV NGINX_VERSION        25-2
 ENV NJS_VERSION          25+0.7.0-1
 ENV XSLT_VERSION         25-1
 
+ENV PROXY_CACHE_VALID_OK "1h"
+ENV PROXY_CACHE_VALID_NOTFOUND "1m"
+ENV PROXY_CACHE_VALID_FORBIDDEN "30s"
+
 COPY plus/etc/ssl /etc/ssl
 COPY plus/usr /usr
 
