--- a/test/docker-compose.yaml
+++ b/test/docker-compose.yaml
@@ -24,6 +24,10 @@ services:
       S3_STYLE: "virtual"
       ALLOW_DIRECTORY_LIST:
       AWS_SIGS_VERSION:
+      PROXY_CACHE_VALID_OK: "1h"
+      PROXY_CACHE_VALID_NOTFOUND: "1m"
+      PROXY_CACHE_VALID_FORBIDDEN: "30s"
+
   minio:
     image: "minio/minio:RELEASE.2021-02-19T04-38-02Z"
     ports:
