Support static websites
Fixes #13
Closes #42

This change add support for reading index.html files from S3
and serving them as the default content when a directory
is requested.

Signed-off-by: Elijah Zupancic <e.zupancic@f5.com>

--- a/common/etc/nginx/nginx.conf
+++ b/common/etc/nginx/nginx.conf
@@ -20,6 +20,8 @@ env AWS_SIGS_VERSION;
 env S3_DEBUG;
 env S3_STYLE;
 env ALLOW_DIRECTORY_LIST;
+env PROVIDE_INDEX_PAGE;
+env APPEND_SLASH_FOR_POSSIBLE_DIRECTORY;
 env PROXY_CACHE_VALID_OK;
 env PROXY_CACHE_VALID_NOTFOUND;
 env PROXY_CACHE_VALID_FORBIDDEN;
