--- a/settings.example
+++ b/settings.example
@@ -9,6 +9,8 @@ S3_STYLE=virtual
 S3_DEBUG=false
 AWS_SIGS_VERSION=4
 ALLOW_DIRECTORY_LIST=false
+PROVIDE_INDEX_PAGE=false
+APPEND_SLASH_FOR_POSSIBLE_DIRECTORY=false
 PROXY_CACHE_VALID_OK=1h
 PROXY_CACHE_VALID_NOTFOUND=1m
 PROXY_CACHE_VALID_FORBIDDEN=30s
