--- a/test/docker-compose.yaml
+++ b/test/docker-compose.yaml
@@ -23,6 +23,8 @@ services:
       S3_DEBUG: "true"
       S3_STYLE: "virtual"
       ALLOW_DIRECTORY_LIST:
+      PROVIDE_INDEX_PAGE:
+      APPEND_SLASH_FOR_POSSIBLE_DIRECTORY:
       AWS_SIGS_VERSION:
       PROXY_CACHE_VALID_OK: "1h"
       PROXY_CACHE_VALID_NOTFOUND: "1m"
