--- a/settings.example
+++ b/settings.example
@@ -9,6 +9,7 @@ S3_STYLE=virtual
 S3_DEBUG=false
 AWS_SIGS_VERSION=4
 ALLOW_DIRECTORY_LIST=false
+STATIC_SITE_HOSTING=false
 PROXY_CACHE_VALID_OK=1h
 PROXY_CACHE_VALID_NOTFOUND=1m
 PROXY_CACHE_VALID_FORBIDDEN=30s
