Make appending a slash a separate ENV variable

--- a/settings.example
+++ b/settings.example
@@ -10,6 +10,7 @@ S3_DEBUG=false
 AWS_SIGS_VERSION=4
 ALLOW_DIRECTORY_LIST=false
 STATIC_SITE_HOSTING=false
+APPEND_SLASH_FOR_POSSIBLE_DIRECTORY=false
 PROXY_CACHE_VALID_OK=1h
 PROXY_CACHE_VALID_NOTFOUND=1m
 PROXY_CACHE_VALID_FORBIDDEN=30s
