Update with code review comments

--- a/test/docker-compose.yaml
+++ b/test/docker-compose.yaml
@@ -24,6 +24,8 @@ services:
       S3_DEBUG: "true"
       S3_STYLE: "virtual"
       ALLOW_DIRECTORY_LIST:
+      PROVIDE_INDEX_PAGE:
+      APPEND_SLASH_FOR_POSSIBLE_DIRECTORY:
       AWS_SIGS_VERSION:
       STATIC_SITE_HOSTING:
       PROXY_CACHE_VALID_OK: "1h"
