Update settings example

--- a/settings.example
+++ b/settings.example
@@ -14,3 +14,5 @@ APPEND_SLASH_FOR_POSSIBLE_DIRECTORY=false
 PROXY_CACHE_VALID_OK=1h
 PROXY_CACHE_VALID_NOTFOUND=1m
 PROXY_CACHE_VALID_FORBIDDEN=30s
+URI_PREFIX=/media
+AUTH_URI=http://host.docker.internal:10000
