Add env var JS_TRUSTED_CERT_PATH
The JS_TRUSTED_CERT_PATH setting will now allow you to
set the path for the js_fetch_trusted_certificate
directive as used when retrieving AWS credentials.

Signed-off-by: Elijah Zupancic <e.zupancic@f5.com>

--- a/Dockerfile.buildkit.plus
+++ b/Dockerfile.buildkit.plus
@@ -11,7 +11,8 @@ COPY plus/usr /usr
 # startup is the same.
 # Source: https://github.com/nginxinc/docker-nginx/tree/1.19.2/stable/buster
 COPY common/docker-entrypoint.sh /docker-entrypoint.sh
-COPY plus/docker-entrypoint.d /docker-entrypoint.d
+COPY common/docker-entrypoint.d /docker-entrypoint.d/
+COPY plus/docker-entrypoint.d /docker-entrypoint.d/
 # Add NGINX Plus package repository keyring
 COPY plus/usr/share/keyrings/nginx-archive-keyring.gpg /usr/share/keyrings/nginx-archive-keyring.gpg
 
