--- a/Dockerfile.oss
+++ b/Dockerfile.oss
@@ -17,7 +17,7 @@ ENV PROXY_CACHE_VALID_FORBIDDEN "30s"
 
 COPY common/etc /etc
 COPY common/docker-entrypoint.sh /docker-entrypoint.sh
-COPY common/docker-entrypoint.d/00-check-for-required-env.sh /docker-entrypoint.d/00-check-for-required-env.sh
+COPY common/docker-entrypoint.d /docker-entrypoint.d/
 COPY oss/etc /etc
 
 RUN set -eux \
