--- a/settings.example
+++ b/settings.example
@@ -14,3 +14,4 @@ APPEND_SLASH_FOR_POSSIBLE_DIRECTORY=false
 PROXY_CACHE_VALID_OK=1h
 PROXY_CACHE_VALID_NOTFOUND=1m
 PROXY_CACHE_VALID_FORBIDDEN=30s
+CORS_ALLOW_ALL=false
