--- a/Dockerfile.buildkit.plus
+++ b/Dockerfile.buildkit.plus
@@ -9,6 +9,11 @@ ENV PROXY_CACHE_VALID_OK "1h"
 ENV PROXY_CACHE_VALID_NOTFOUND "1m"
 ENV PROXY_CACHE_VALID_FORBIDDEN "30s"
 
+ENV PROXY_CACHE_VALID_OK "1h"
+ENV PROXY_CACHE_VALID_NOTFOUND "1m"
+ENV PROXY_CACHE_VALID_FORBIDDEN "30s"
+ENV CORS_ENABLED 0
+
 COPY plus/usr /usr
 
 # Copy files from the OSS NGINX Docker container such that the container
