--- a/Dockerfile.plus
+++ b/Dockerfile.plus
@@ -8,6 +8,7 @@ ENV XSLT_VERSION         27-1
 ENV PROXY_CACHE_VALID_OK "1h"
 ENV PROXY_CACHE_VALID_NOTFOUND "1m"
 ENV PROXY_CACHE_VALID_FORBIDDEN "30s"
+ENV CORS_ENABLED 0
 
 COPY plus/etc/ssl /etc/ssl
 COPY plus/usr /usr
