--- a/Dockerfile.oss
+++ b/Dockerfile.oss
@@ -6,6 +6,7 @@ ENV NJS_VERSION   0.7.8
 ENV PROXY_CACHE_VALID_OK "1h"
 ENV PROXY_CACHE_VALID_NOTFOUND "1m"
 ENV PROXY_CACHE_VALID_FORBIDDEN "30s"
+ENV CORS_ENABLED 0
 
 # We modify the nginx base image by:
 # 1. Adding configuration files needed for proxying private S3 buckets
