--- a/Dockerfile.unprivileged
+++ b/Dockerfile.unprivileged
@@ -1,7 +1,7 @@
 # This container images makes the necessary modifications in the
 # inherited image (which could be OSS NGINX or NGINX Plus) in order
 # to allow running NGINX S3 Gateway as a non root user.
-# Steps are based on the official unpriviledged container:
+# Steps are based on the official unprivileged container:
 # https://github.com/nginxinc/docker-nginx-unprivileged/blob/main/Dockerfile-debian.template
 FROM nginx-s3-gateway
 
