--- a/test/docker-compose.yaml
+++ b/test/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
         condition: service_healthy
     image: "nginx-s3-gateway"
     ports:
-      - "8989:80/tcp"
+      - "8989:${NGINX_INTERNAL_PORT-80}/tcp"
     links:
       - "minio"
     restart: "no"
