--- a/Dockerfile.buildkit.plus
+++ b/Dockerfile.buildkit.plus
@@ -5,6 +5,10 @@ ENV NGINX_VERSION        1.23.2
 ENV NJS_VERSION          28+0.7.9-1
 ENV XSLT_VERSION         28-1
 
+ENV PROXY_CACHE_VALID_OK "1h"
+ENV PROXY_CACHE_VALID_NOTFOUND "1m"
+ENV PROXY_CACHE_VALID_FORBIDDEN "30s"
+
 COPY plus/usr /usr
 
 # Copy files from the OSS NGINX Docker container such that the container
