Allow for the configuration of Access-Control-Allow-Origin
Signed-off-by: Elijah Zupancic <e.zupancic@f5.com>

--- a/common/etc/nginx/templates/gateway/cors.conf.template
+++ b/common/etc/nginx/templates/gateway/cors.conf.template
@@ -1,7 +1,7 @@
 set $request_cors "${request_method}_${CORS_ENABLED}";
 
 if ($request_cors = "OPTIONS_1") {
-    add_header 'Access-Control-Allow-Origin' '*';
+    add_header 'Access-Control-Allow-Origin' '${CORS_ALLOWED_ORIGIN}';
     add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
     #
     # Custom headers and headers various browsers *should* be OK with but aren't
@@ -17,14 +17,14 @@ if ($request_cors = "OPTIONS_1") {
 }
 
 if ($request_cors = "GET_1") {
-    add_header 'Access-Control-Allow-Origin' '*' always;
+    add_header 'Access-Control-Allow-Origin' '${CORS_ALLOWED_ORIGIN}' always;
     add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
     add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
     add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
 }
 
 if ($request_cors = "HEAD_1") {
-    add_header 'Access-Control-Allow-Origin' '*' always;
+    add_header 'Access-Control-Allow-Origin' '${CORS_ALLOWED_ORIGIN}' always;
     add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
     add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
     add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
