Set proxy_ssl_name to S3_SERVER to allow SNI to work
Signed-off-by: Elijah Zupancic <e.zupancic@f5.com>

--- a/common/etc/nginx/templates/default.conf.template
+++ b/common/etc/nginx/templates/default.conf.template
@@ -107,6 +107,7 @@ server {
 
         # Enable passing of the server name through TLS Server Name Indication extension.
         proxy_ssl_server_name on;
+        proxy_ssl_name ${S3_SERVER};
 
         # Set the Authorization header to the AWS Signatures credentials
         proxy_set_header Authorization $s3auth;
@@ -153,6 +154,7 @@ server {
 
         # Enable passing of the server name through TLS Server Name Indication extension.
         proxy_ssl_server_name on;
+        proxy_ssl_name ${S3_SERVER};
 
         # Set the Authorization header to the AWS Signatures credentials
         proxy_set_header Authorization $s3auth;
