--- a/common/etc/nginx/nginx.conf
+++ b/common/etc/nginx/nginx.conf
@@ -26,6 +26,7 @@ env PROXY_CACHE_VALID_OK;
 env PROXY_CACHE_VALID_NOTFOUND;
 env PROXY_CACHE_VALID_FORBIDDEN;
 env HEADER_PREFIXES_TO_STRIP;
+env FOUR_O_FOUR_ON_EMPTY_BUCKET;
 
 events {
     worker_connections  1024;
